--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-time-textfield",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Material UI TextField with controlled hour/minute/meridiem input",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.9",
@@ -39,9 +40,9 @@
     "rollup-plugin-postcss": "^4.0.2"
   },
   "peerDependencies": {
+    "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.9",
     "date-fns": "^2.29.3",
-    "@emotion/styled": "^11.10.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
